# adventofcode2022

./: .env.example  .gitignore  LICENSE  advent-of-haskell.cabal  cabal.project
aoc/: AOC.hs
aoc/AOC/: API.hs  Types.hs
data/examples/1/: part1.txt  part2.txt
data/examples/2/: part1.txt  part2.txt
data/examples/3/: part1.txt  part2.txt
data/examples/4/: part1.txt  part2.txt
data/examples/5/: part1.txt  part2.txt
data/examples/6/: part1.txt
data/examples/7/: part1.txt  part2.txt
data/examples/8/: part1.txt  part2.txt
runner/: Main.hs  Tests.hs
scripts/: mkdays.sh
solutions/: Solutions.hs
solutions/Days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs
solutions/Utils/: Parser.hs  Tree.hs
